new env for data

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
             <div class="col-md-12 splash">
                 <div class="intro">
                     <h1 id="timer"></h1>
-                    <p>Until I see you.</p>
+                    <p>{{ message }}</p>
                 </div>
             </div>
         </div>
