--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
         .home {
             height: 100vh
+                background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
         }
 
         .splash {
