--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         }
 
         .home {
-            height: 100vh
+            height: 100vh;
                 background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
         }
 
@@ -42,7 +42,7 @@
 
         .splash h1,
         .splash p {
-            color: #000;
+            color: #eeeeee;
             font-family: 'Roboto Condensed', sans-serif
         }
 
