--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
         }
 
         .home {
-            height: 100vh;
-                background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
+            height: 60vh;
+                background: url('https://www.sunlandrvresorts.com/wp-content/uploads/2013/12/bigstock-sunset-and-beach-38822104.jpg')repeat;
         }
 
         .splash {
-            height: 100%;
-            width: 100%;
+            height: 150%;
+            width: 150%;
             text-align: center;
             display: flex;
             justify-content: center;
@@ -42,7 +42,7 @@
 
         .splash h1,
         .splash p {
-            color: #eeeeee;
+            color: #000;
             font-family: 'Roboto Condensed', sans-serif
         }
 
