--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
         }
 
         .home {
-            height: 60vh;
+            height: 100vh;
                 background: url('https://www.sunlandrvresorts.com/wp-content/uploads/2013/12/bigstock-sunset-and-beach-38822104.jpg')repeat;
         }
 
         .splash {
-            height: 150%;
-            width: 150%;
+            height: 100%;
+            width: 100%;
             text-align: center;
             display: flex;
             justify-content: center;
@@ -58,7 +58,7 @@
             <div class="col-md-12 splash">
                 <div class="intro">
                     <h1 id="timer"></h1>
-                    <p>{{ message }}</p>
+                    <h4>{{ message }}</h4>
                 </div>
             </div>
         </div>
