--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
         .home {
             height: 100vh;
-                background: url('icehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
+                background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
         }
 
         .splash {
@@ -58,7 +58,7 @@
             <div class="col-md-12 splash">
                 <div class="intro">
                     <h1 id="timer"></h1>
-                    <p>{{ message }}</p>
+                    <h3>{{ message }}</h3>
                 </div>
             </div>
         </div>
