--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         }
 
         .splash {
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             text-align: center;
             display: flex;
@@ -41,7 +41,7 @@
         }
 
         .splash h1,
-        .splash p {
+        .splash h3 {
             color: #000;
             font-family: 'Roboto Condensed', sans-serif
         }
