--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         }
 
         .splash {
-            min-height: 100%;
+            height: 100%;
             width: 100%;
             text-align: center;
             display: flex;
