--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 
         .splash h1,
         .splash h3 {
-            color: #000;
+            color: #eeeeee;
             font-family: 'Roboto Condensed', sans-serif
         }
 
