--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,19 @@
 
 <head>
     <title>Countdown</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="{{url_for('static', filename='flipclock.css')}}">
+    <script src="{{url_for('static', filename='flipclock.min.js')}}"></script>
     <style>
         a:hover {
             text-decoration: none
         }
-
         .home {
             height: 100vh;
-                background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
+            background: url('('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
         }
-
         .splash {
             height: 100%;
             width: 100%;
@@ -21,31 +23,26 @@
             justify-content: center;
             align-items: center
         }
-
         .intro {
             padding-right: 15px;
             padding-bottom: 15px
         }
-
         .CTA {
             width: 300px;
             padding: 20px;
             color: #28324E;
             font-size: large
         }
-
         .CTA:hover {
             background-color: #28324E;
             border-color: #fff;
             color: #fff
         }
-
         .splash h1,
-        .splash h3 {
-            color: #eeeeee;
+        .splash p {
+            color: #000;
             font-family: 'Roboto Condensed', sans-serif
         }
-
         .splash p {
             padding-top: 10px
         }
@@ -58,7 +55,15 @@
             <div class="col-md-12 splash">
                 <div class="intro">
                     <h1 id="timer"></h1>
-                    <h3>{{ message }}</h3>
+                    <div class="clock"></div>
+
+                    <script type="text/javascript">
+                        var clock = $('.clock').FlipClock('{{ date }}', {
+                            clockFace: 'DailyCounter',
+                            countdown: true
+                        });
+                    </script>
+                    <p>{{ message }}</p>
                 </div>
             </div>
         </div>
@@ -68,7 +73,4 @@
     </script>
 </body>
 <footer>
-    <script>
-        var countDownDate = new Date("{{ date }}").getTime(), x = setInterval(function () { var e = (new Date).getTime(), t = countDownDate - e, n = Math.floor(t / 864e5), o = Math.floor(t % 864e5 / 36e5), a = Math.floor(t % 36e5 / 6e4), r = Math.floor(t % 6e4 / 1e3); document.getElementById("timer").innerHTML = n + " Days, " + o + " Hours, " + a + " Minutes, " + r + " Seconds ", t < 0 && (clearInterval(x), document.getElementById("timer").innerHTML = "I'm here.") }, 1e3);
-    </script>
 </footer>
