--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         }
         .home {
             height: 100vh;
-            background: url('('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
+                background: url('https://www.choicehotels.com/cms/images/choice-hotels/demand-articles/image_best-beaches-in-san-diego_header/image_best-beaches-in-san-diego_header.jpg')repeat;
         }
         .splash {
             height: 100%;
@@ -39,8 +39,8 @@
             color: #fff
         }
         .splash h1,
-        .splash p {
-            color: #000;
+        .splash h3 {
+            color: #eeeeee;
             font-family: 'Roboto Condensed', sans-serif
         }
         .splash p {
@@ -63,7 +63,7 @@
                             countdown: true
                         });
                     </script>
-                    <p>{{ message }}</p>
+                    <h3>{{ message }}</h3>
                 </div>
             </div>
         </div>
@@ -73,4 +73,4 @@
     </script>
 </body>
 <footer>
-</footer>
+ </footer>
